# rust_multi_llm_choose_ai_function

./: .env
rust_ai_function/: Cargo.toml
rust_ai_function/async-trait/: Cargo.toml
rust_ai_function/src/: lib.rs  main.rs
rust_ai_function/src/configuration/: mod.rs  ollama_config.rs
rust_ai_function/src/llm_factory/: llm.rs
